Uniformed SSI style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <!--#include virtual="navbar.html" -->
+    <!--#include virtual="/navbar.html" -->
 
     <!-- Hero Section -->
     <section class="py-5">
@@ -60,7 +60,7 @@
         </div>
     </section>
 
-    <!--#include virtual="footer.html" -->
+    <!--#include virtual="/footer.html" -->
 
 
     <!-- Bootstrap JS -->
