--- a/contacts.html
+++ b/contacts.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <!--#include virtual="navbar.html" -->
+    <!--#include virtual="/navbar.html" -->
 
     <!-- Contact Hero -->
     <section class="py-5 bg-light">
@@ -52,7 +52,7 @@
         </div>
     </section>
 
-    <!--#include virtual="footer.html" -->
+    <!--#include virtual="/footer.html" -->
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
