--- a/navbar.html
+++ b/navbar.html
@@ -11,13 +11,13 @@
                     <a class="nav-link" id="home-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="project1-link" href="/projects/project1.html">Project 1</a>
+                    <a class="nav-link" id="project1-link" href="/projects/project1.html" data-i18n="project1">Project 1</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="project2-link" href="/projects/project2.html">Project 2</a>
+                    <a class="nav-link" id="project2-link" href="/projects/project2.html" data-i18n="project2">Project 2</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="contacts-link" href="/contacts.html">Contact</a>
+                    <a class="nav-link" id="contacts-link" href="/contacts.html" data-i18n="contacts">Contact</a>
                 </li>
             </ul>
         </div>
