--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
     <!-- Contact Hero -->
     <section class="py-5 bg-light">
         <div class="container py-5 text-center">
-            <h1 class="display-4 text-dark">Contact Me</h1>
+            <h1 class="display-4 text-dark" data-i18n="contact_title">Contact Me</h1>
             <p class="lead text-dark">Feel free to reach out for collaborations, questions, or just to say hello!</p>
         </div>
     </section>
@@ -32,15 +32,15 @@
                         <div class="card-body">
                             <form>
                                 <div class="mb-3">
-                                    <label for="name" class="form-label">Name</label>
+                                    <label for="name" class="form-label" data-i18n="form_name">Name</label>
                                     <input type="text" class="form-control" id="name" placeholder="Your Name">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="email" class="form-label">Email</label>
+                                    <label for="email" class="form-label" data-i18n="form_email">Email</label>
                                     <input type="email" class="form-control" id="email" placeholder="Your Email">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="message" class="form-label">Message</label>
+                                    <label for="message" class="form-label" data-i18n="form_message">Message</label>
                                     <textarea class="form-control" id="message" rows="5" placeholder="Your Message"></textarea>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Send Message</button>
@@ -56,5 +56,12 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+
+        <div class="language-selector position-fixed bottom-0 end-0 m-3">
+            <button onclick="changeLanguage('en')" class="btn btn-sm btn-outline-light">English</button>
+            <button onclick="changeLanguage('it')" class="btn btn-sm btn-outline-light">Italiano</button>
+        </div>
+        
+        <script src="assets/js/translations.js"></script>
+        </body>
 </html>
