--- a/footer.html
+++ b/footer.html
@@ -3,10 +3,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-md-start">
-                <p class="mb-0 text-white">© 2025 Matteo Veroni. All rights reserved.</p>
+                <p class="mb-0 text-white" data-i18n="copyright">© 2025 Matteo Veroni. All rights reserved.</p>
             </div>
             <div class="col-md-6 text-md-end">
-                <a href="/contacts.html" class="text-white">Contact Me</a>
+                <a href="/contacts.html" class="text-white" data-i18n="contact_me">Contact Me</a>
             </div>
         </div>
     </div>
