Enhanced multilanguage selector

--- a/navbar.html
+++ b/navbar.html
@@ -20,6 +20,7 @@
                     <a class="nav-link" id="contacts-link" href="/contacts.html" data-i18n="contacts">Contact</a>
                 </li>
             </ul>
+            <!--#include virtual="/language_selector.html" -->
         </div>
     </div>
 </nav>
