--- a/contacts.html
+++ b/contacts.html
@@ -57,11 +57,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-        <div class="language-selector position-fixed bottom-0 end-0 m-3">
-            <button onclick="changeLanguage('en')" class="btn btn-sm btn-outline-light">English</button>
-            <button onclick="changeLanguage('it')" class="btn btn-sm btn-outline-light">Italiano</button>
-        </div>
-        
-        <script src="assets/js/translations.js"></script>
-        </body>
+    <!-- Multilingual -->
+    <script src="/assets/js/translations.js"></script>
+</body>
 </html>
