--- a/footer.html
+++ b/footer.html
@@ -7,6 +7,7 @@
             </div>
             <div class="col-md-6 text-md-end">
                 <a href="/contacts.html" class="text-white" data-i18n="contact_me">Contact Me</a>
+                <!--#include virtual="/language_selector.html" -->
             </div>
         </div>
     </div>
