Add image in index.html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
 
     <!-- About Section -->
     <section class="py-5 bg-accent">
-        <div class="container">
-            <h2 class="mb-4 text-white" data-i18n="about_title">About Me</h2>
-            <p class="text-white" data-i18n="about_text">I am a passionate developer and engineer with experience in embedded systems, IoT, and web development.</p>
+        <div class="about-me">
+            <div class="about-me-text">
+                <h2 class="mb-4" data-i18n="about_title">About Me</h2>
+                <p class="lead" data-i18n="about_text">Your biography or description goes here...</p>
+            </div>
+            <div class="about-me-image">
+                <img src="/assets/images/profile.jpg" alt="Matteo Veroni" class="profile-image">
+            </div>
         </div>
     </section>
 
