--- a/navbar.html
+++ b/navbar.html
@@ -31,6 +31,7 @@
         const currentPath = window.location.pathname;
         const links = {
             "/": "home-link",
+            "/index.html": "home-link",
             "/projects/project1.html": "project1-link",
             "/projects/project2.html": "project2-link",
             "/contacts.html": "contacts-link"
