Add formation and experience sections

--- a/index.html
+++ b/index.html
@@ -26,10 +26,114 @@
         <div class="about-me">
             <div class="about-me-text">
                 <h2 class="mb-4" data-i18n="about_title">About Me</h2>
-                <p class="lead" data-i18n="about_text">Your biography or description goes here...</p>
+                <p class="lead" data-i18n="about_text">
+                    I am a passionate Computer Science Engineering student with a strong background in software development, embedded systems, and cybersecurity.
+                    Below is a timeline of my academic journey.
+                </p>
             </div>
             <div class="about-me-image">
                 <img src="/assets/images/profile.jpg" alt="Matteo Veroni" class="profile-image">
+            </div>
+        </div>
+    </section>
+
+    <!-- Formation timeline -->
+    <section class="py-5 bg-alt-accent">
+        <h3 class="mb-6" data-i18n="timeline_title" style="text-align: center;">My Formation</h3>
+        <div class="timeline">
+            <div class="timeline-content">
+                <div class="row g-0">
+                    <div class="col-3 d-flex align-items-center justify-content-center p-3">
+                        <img
+                            src="/assets/images/unimore.svg"
+                            alt="University of Modena and Reggio Emilia Logo"
+                            class="img-fluid formation-logo"
+                        >
+                    </div>
+                    <div class="col-9">
+                        <h4 data-i18n="timeline_master">Master Degree in Computer Science Engineering</h4>
+                        <p data-i18n="timeline_master_location"><strong>University of Modena and Reggio Emilia</strong></p>
+                        <p data-i18n="timeline_master_duration">2024 - Present</p>
+                        <p data-i18n="timeline_master_fields">Fields: ICT, Database and Network Design, Software Development, Electronics, Automation</p>
+                    </div>
+                </div>
+            </div>
+            <div class="timeline-content">
+                <h4 data-i18n="timeline_bachelor">Bachelor's Degree in Computer Science Engineering</h4>
+                <p data-i18n="timeline_bachelor_location"><strong>University of Modena and Reggio Emilia</strong></p>
+                <p data-i18n="timeline_bachelor_duration">2021 - 2024</p>
+                <p data-i18n="timeline_bachelor_grade">Final Grade: Summa Cum Laude</p>
+                <p data-i18n="timeline_bachelor_thesis">Thesis: EHRforEquips - A clinical data management system for freelance doctors</p>
+                <p data-i18n="timeline_bachelor_fields">Fields: Network design, Cybersecurity, Software Development, Electronics, Automation</p>
+            </div>
+            <div class="timeline-content">
+                    <h4 data-i18n="timeline_highschool">High School Diploma - Scientific High School (Applied Sciences)</h4>
+                    <p data-i18n="timeline_highschool_location"><strong>Liceo Scientifico Statale Manfredo Fanti, Carpi</strong></p>
+                    <p data-i18n="timeline_highschool_duration">2016 - 2021</p>
+                    <p data-i18n="timeline_highschool_grade">Final Grade: 100/100</p>
+                </div>
+            <div class="timeline-content">
+                <h4 data-i18n="timeline_giardino">Giardino delle Imprese</h4>
+                <p data-i18n="timeline_giardino_location"><strong>Fondazione Golinelli, Bologna</strong></p>
+                <p data-i18n="timeline_giardino_duration">Jul 2019 - Sep 2019</p>
+                <p data-i18n="timeline_giardino_fields">Informal school of entrepreneurial culture</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Work & Volunteer Experience Section -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-5" data-i18n="experience_title">Work & Volunteer Experience</h2>
+            <div class="row g-4">
+                <!-- eRelief CTO Card -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title" data-i18n="experience_erelief">Chief Technology Officer</h5>
+                            <h6 class="card-subtitle mb-2 text-muted" data-i18n="experience_erelief_location">eRelief, Bologna</h6>
+                            <p class="card-text text-muted" data-i18n="experience_erelief_duration">Aug 2019 - Mar 2022</p>
+                            <ul class="card-text">
+                                <li data-i18n="experience_erelief_bullet1">Staff training and R&D</li>
+                                <li data-i18n="experience_erelief_bullet2">Business project presentations (international)</li>
+                                <li data-i18n="experience_erelief_bullet3">Solutions for museum accessibility for the visually impaired</li>
+                            </ul>
+                            <a href="https://docs.google.com/presentation/d/1jAxDiHsVGsmO59WjGKDM5kZ5-YpdHpDOWe9aZdg-VuI/edit" class="card-link" target="_blank" data-i18n="learn_more">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Catechist Volunteer Card -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title" data-i18n="experience_acr">Catechist & ACR Youth Educator</h5>
+                            <h6 class="card-subtitle mb-2 text-muted" data-i18n="experience_acr_location">Carpi, Italy</h6>
+                            <p class="card-text text-muted" data-i18n="experience_acr_duration">Jan 2022 - Present</p>
+                            <ul class="card-text">
+                                <li data-i18n="experience_acr_bullet1">Educator for children aged 8-12</li>
+                                <li data-i18n="experience_acr_bullet2">Parent relationship management</li>
+                                <li data-i18n="experience_acr_bullet3">Summer camp service (overnight stays)</li>
+                            </ul>
+                            <a href="https://azionecattolica.it/ramo/acr/" class="card-link" target="_blank" data-i18n="learn_more">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- After-School Teacher Card -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title" data-i18n="experience_afterschool">After-School Teacher</h5>
+                            <h6 class="card-subtitle mb-2 text-muted" data-i18n="experience_afterschool_location">Carpi, Italy</h6>
+                            <p class="card-text text-muted" data-i18n="experience_afterschool_duration">Sep 2024 - Feb 2025</p>
+                            <ul class="card-text">
+                                <li data-i18n="experience_afterschool_bullet1">Tutored children aged 12-14</li>
+                                <li data-i18n="experience_afterschool_bullet2">Homework assistance and mentoring</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
