refined formation timeline

--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
         <div class="timeline">
             <div class="timeline-content">
                 <div class="row g-0">
-                    <div class="col-3 d-flex align-items-center justify-content-center p-3">
-                        <img
-                            src="/assets/images/unimore.svg"
-                            alt="University of Modena and Reggio Emilia Logo"
-                            class="img-fluid formation-logo"
-                        >
-                    </div>
-                    <div class="col-9">
+                    <img
+                        src="/assets/images/unimore.svg"
+                        alt="University of Modena and Reggio Emilia Logo"
+                        class="img-fluid formation-logo"
+                    >
+                    <div class="col-9 timeline-content-textcolumn">
                         <h4 data-i18n="timeline_master">Master Degree in Computer Science Engineering</h4>
                         <p data-i18n="timeline_master_location"><strong>University of Modena and Reggio Emilia</strong></p>
                         <p data-i18n="timeline_master_duration">2024 - Present</p>
@@ -60,14 +58,12 @@
             </div>
             <div class="timeline-content">
                 <div class="row g-0">
-                    <div class="col-3 d-flex align-items-center justify-content-center p-3">
-                        <img
-                            src="/assets/images/unimore.svg"
-                            alt="University of Modena and Reggio Emilia Logo"
-                            class="img-fluid formation-logo"
-                        >
-                    </div>
-                    <div class="col-9">
+                    <img
+                        src="/assets/images/unimore.svg"
+                        alt="University of Modena and Reggio Emilia Logo"
+                        class="img-fluid formation-logo"
+                    >
+                    <div class="col-9 timeline-content-textcolumn">
                         <h4 data-i18n="timeline_bachelor">Bachelor's Degree in Computer Science Engineering</h4>
                         <p data-i18n="timeline_bachelor_location"><strong>University of Modena and Reggio Emilia</strong></p>
                         <p data-i18n="timeline_bachelor_duration">2021 - 2024</p>
@@ -79,14 +75,12 @@
             </div>
             <div class="timeline-content">
                 <div class="row g-0">
-                    <div class="col-3 d-flex align-items-center justify-content-center p-3">
-                        <img
-                            src="/assets/images/fanti.svg"
-                            alt="Liceo Fanti Logo"
-                            class="img-fluid formation-logo"
-                        >
-                    </div>
-                    <div class="col-9">
+                    <img
+                        src="/assets/images/fanti.svg"
+                        alt="Liceo Fanti Logo"
+                        class="img-fluid formation-logo"
+                    >
+                    <div class="col-9 timeline-content-textcolumn">
                         <h4 data-i18n="timeline_highschool">High School Diploma - Scientific High School (Applied Sciences)</h4>
                         <p data-i18n="timeline_highschool_location"><strong>Liceo Scientifico Statale Manfredo Fanti, Carpi</strong></p>
                         <p data-i18n="timeline_highschool_duration">2016 - 2021</p>
@@ -95,15 +89,13 @@
                 </div>
             </div>
             <div class="timeline-content">
-                <div class="row g-o">
-                    <div class="col-3 d-flex align-items-center justify-content-center p-3">
-                        <img
-                            src="/assets/images/giardino.svg"
-                            alt="Giardino delle Imprese Logo"
-                            class="img-fluid formation-logo"
-                        >
-                    </div>
-                    <div class="col-9">
+                <div class="row g-0">
+                    <img
+                        src="/assets/images/giardino.svg"
+                        alt="Giardino delle Imprese Logo"
+                        class="img-fluid formation-logo"
+                    >
+                    <div class="col-9 timeline-content-textcolumn">
                         <h4 data-i18n="timeline_giardino">Giardino delle Imprese</h4>
                         <p data-i18n="timeline_giardino_location"><strong>Fondazione Golinelli, Bologna</strong></p>
                         <p data-i18n="timeline_giardino_duration">Jul 2019 - Sep 2019</p>
